# libbinder

./: ActivityManager.cpp  Android.bp  Android.mk  AppOpsManager.cpp  Binder.cpp  BpBinder.cpp  BufferedTextOutput.cpp  BufferedTextOutput.h  CMakeLists.txt  Debug.cpp  Debug.h  FdTrigger.cpp  FdTrigger.h  HalToken.cpp  IActivityManager.cpp  IAppOpsCallback.cpp  IAppOpsService.cpp  IBatteryStats.cpp  IInterface.cpp  IMediaResourceMonitor.cpp  IMemory.cpp  IPCThreadState.cpp  IPermissionController.cpp  IProcessInfoService.cpp  IResultReceiver.cpp  IServiceManager.cpp  IShellCallback.cpp  IUidObserver.cpp  IpPrefix.cpp  LazyServiceRegistrar.cpp  MemoryBase.cpp  MemoryDealer.cpp  MemoryHeapBase.cpp  OWNERS  Parcel.cpp  ParcelValTypes.h  ParcelableHolder.cpp  PermissionCache.cpp  PermissionController.cpp  PersistableBundle.cpp  (+38 more)
tests/: Android.bp  BinderRpcTestClientInfo.aidl  BinderRpcTestServerInfo.aidl  CMakeLists.txt  IBinderRpcBenchmark.aidl  IBinderRpcCallback.aidl  IBinderRpcSession.aidl  IBinderRpcTest.aidl  IBinderStabilityTest.aidl  IBinderStabilityTestSub.aidl  ParcelableCertificateData.aidl  RpcAuthTesting.cpp  RpcAuthTesting.h  RpcCertificateVerifierSimple.cpp  RpcCertificateVerifierSimple.h  RpcTlsTestUtils.cpp  RpcTlsUtilsTest.cpp  binderAbiHelper.h  binderAllocationLimits.cpp  binderBinderUnitTest.cpp  binderClearBufTest.cpp  binderDriverInterfaceTest.cpp  binderHostDeviceTest.cpp  binderHostDeviceTest.xml  binderHostDeviceTestService.cpp  binderLibTest.cpp  binderMemoryHeapBaseUnitTest.cpp  binderParcelBenchmark.cpp  binderParcelTest.cpp  binderParcelUnitTest.cpp  binderRpcBenchmark.cpp  (+10 more)
(+237 files in other folders)
